# ozzylogik_task2

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  CODESTYLE.md  Dockerfile  LICENSE  README.md
.github/workflows/: client.yml  install.yml  install_download_all.yml  macos.yml  server.yml  standalone.yml  style.yml  ubuntu.yml  windows.yml
all/: CMakeLists.txt
client/: CMakeLists.txt
client/include/task2client/: config.hpp  config_cmd.hpp
client/source/: main.cpp
documentation/: CMakeLists.txt
include/task2/: fmtlog_verbosity_level.hpp
server/: CMakeLists.txt
server/include/task2server/: config.hpp  config_cmd.hpp
server/source/: main.cpp
test/: CMakeLists.txt
test/source/: verbosity.cpp
